--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>
             Raghav - Assignment 1</title>
-            <link rel="stylesheet" href="css/index.css" type="text/css">
+            <link rel="stylesheet" href="./index.css" type="text/css">
     </head>
     <body>
 
